[Sentinel Engine 6f]: Define Engine Request Metadata
